src/main/gen/io/kusionstack/kcl/parser/KCLParser.java
// This is a generated file. Not intended for manual editing.
package io.kusionstack.kcl.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.kusionstack.kcl.psi.KCLTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class KCLParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return kclFile(b, l + 1);
  }

  /* ********************************************************** */
  // shift_expr (AND shift_expr)*
  public static boolean and_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AND_EXPR, "<and expr>");
    r = shift_expr(b, l + 1);
    r = r && and_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AND shift_expr)*
  private static boolean and_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!and_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_expr_1", c)) break;
    }
    return true;
  }

  // AND shift_expr
  private static boolean and_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && shift_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // not_test (K_AND not_test)*
  public static boolean and_test(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_test")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AND_TEST, "<and test>");
    r = not_test(b, l + 1);
    r = r && and_test_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (K_AND not_test)*
  private static boolean and_test_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_test_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!and_test_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_test_1", c)) break;
    }
    return true;
  }

  // K_AND not_test
  private static boolean and_test_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_test_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, K_AND);
    r = r && not_test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // single_name ASSIGN test | MULTIPLY test | DOUBLE_STAR test | test
  public static boolean argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
    r = argument_0(b, l + 1);
    if (!r) r = argument_1(b, l + 1);
    if (!r) r = argument_2(b, l + 1);
    if (!r) r = test(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // single_name ASSIGN test
  private static boolean argument_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = single_name(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // MULTIPLY test
  private static boolean argument_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MULTIPLY);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DOUBLE_STAR test
  private static boolean argument_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOUBLE_STAR);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // argument (COMMA argument)*
  public static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENTS, "<arguments>");
    r = argument(b, l + 1);
    r = r && arguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA argument)*
  private static boolean arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arguments_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arguments_1", c)) break;
    }
    return true;
  }

  // COMMA argument
  private static boolean arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // term (( PLUS | MINUS ) term)*
  public static boolean arith_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARITH_EXPR, "<arith expr>");
    r = term(b, l + 1);
    r = r && arith_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (( PLUS | MINUS ) term)*
  private static boolean arith_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arith_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arith_expr_1", c)) break;
    }
    return true;
  }

  // ( PLUS | MINUS ) term
  private static boolean arith_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = arith_expr_1_0_0(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // PLUS | MINUS
  private static boolean arith_expr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    return r;
  }

  /* ********************************************************** */
  // ASSERT test (COMMA test)?
  public static boolean assert_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_stmt")) return false;
    if (!nextTokenIs(b, ASSERT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSERT);
    r = r && test(b, l + 1);
    r = r && assert_stmt_2(b, l + 1);
    exit_section_(b, m, ASSERT_STMT, r);
    return r;
  }

  // (COMMA test)?
  private static boolean assert_stmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_stmt_2")) return false;
    assert_stmt_2_0(b, l + 1);
    return true;
  }

  // COMMA test
  private static boolean assert_stmt_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_stmt_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier [COLON type] ASSIGN (identifier ASSIGN)* test
  //     | identifier (COMP_PLUS | COMP_MINUS | COMP_MULTIPLY | COMP_DOUBLE_STAR | COMP_DIVIDE
  //     | COMP_DOUBLE_DIVIDE | COMP_MOD | COMP_AND | COMP_OR | COMP_XOR | COMP_SHIFT_LEFT
  //     | COMP_SHIFT_RIGHT) test
  public static boolean assign_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_stmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_STMT, "<assign stmt>");
    r = assign_stmt_0(b, l + 1);
    if (!r) r = assign_stmt_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // identifier [COLON type] ASSIGN (identifier ASSIGN)* test
  private static boolean assign_stmt_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_stmt_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && assign_stmt_0_1(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && assign_stmt_0_3(b, l + 1);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [COLON type]
  private static boolean assign_stmt_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_stmt_0_1")) return false;
    assign_stmt_0_1_0(b, l + 1);
    return true;
  }

  // COLON type
  private static boolean assign_stmt_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_stmt_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (identifier ASSIGN)*
  private static boolean assign_stmt_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_stmt_0_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!assign_stmt_0_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "assign_stmt_0_3", c)) break;
    }
    return true;
  }

  // identifier ASSIGN
  private static boolean assign_stmt_0_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_stmt_0_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    exit_section_(b, m, null, r);
    return r;
  }

  // identifier (COMP_PLUS | COMP_MINUS | COMP_MULTIPLY | COMP_DOUBLE_STAR | COMP_DIVIDE
  //     | COMP_DOUBLE_DIVIDE | COMP_MOD | COMP_AND | COMP_OR | COMP_XOR | COMP_SHIFT_LEFT
  //     | COMP_SHIFT_RIGHT) test
  private static boolean assign_stmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_stmt_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && assign_stmt_1_1(b, l + 1);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMP_PLUS | COMP_MINUS | COMP_MULTIPLY | COMP_DOUBLE_STAR | COMP_DIVIDE
  //     | COMP_DOUBLE_DIVIDE | COMP_MOD | COMP_AND | COMP_OR | COMP_XOR | COMP_SHIFT_LEFT
  //     | COMP_SHIFT_RIGHT
  private static boolean assign_stmt_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_stmt_1_1")) return false;
    boolean r;
    r = consumeToken(b, COMP_PLUS);
    if (!r) r = consumeToken(b, COMP_MINUS);
    if (!r) r = consumeToken(b, COMP_MULTIPLY);
    if (!r) r = consumeToken(b, COMP_DOUBLE_STAR);
    if (!r) r = consumeToken(b, COMP_DIVIDE);
    if (!r) r = consumeToken(b, COMP_DOUBLE_DIVIDE);
    if (!r) r = consumeToken(b, COMP_MOD);
    if (!r) r = consumeToken(b, COMP_AND);
    if (!r) r = consumeToken(b, COMP_OR);
    if (!r) r = consumeToken(b, COMP_XOR);
    if (!r) r = consumeToken(b, COMP_SHIFT_LEFT);
    if (!r) r = consumeToken(b, COMP_SHIFT_RIGHT);
    return r;
  }

  /* ********************************************************** */
  // [decorators] (FINAL)? single_name [QUESTION] COLON type [(ASSIGN|COMP_OR) test]
  public static boolean attribute_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_stmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_STMT, "<attribute stmt>");
    r = attribute_stmt_0(b, l + 1);
    r = r && attribute_stmt_1(b, l + 1);
    r = r && single_name(b, l + 1);
    r = r && attribute_stmt_3(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && type(b, l + 1);
    r = r && attribute_stmt_6(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [decorators]
  private static boolean attribute_stmt_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_stmt_0")) return false;
    decorators(b, l + 1);
    return true;
  }

  // (FINAL)?
  private static boolean attribute_stmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_stmt_1")) return false;
    consumeToken(b, FINAL);
    return true;
  }

  // [QUESTION]
  private static boolean attribute_stmt_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_stmt_3")) return false;
    consumeToken(b, QUESTION);
    return true;
  }

  // [(ASSIGN|COMP_OR) test]
  private static boolean attribute_stmt_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_stmt_6")) return false;
    attribute_stmt_6_0(b, l + 1);
    return true;
  }

  // (ASSIGN|COMP_OR) test
  private static boolean attribute_stmt_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_stmt_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attribute_stmt_6_0_0(b, l + 1);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ASSIGN|COMP_OR
  private static boolean attribute_stmt_6_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_stmt_6_0_0")) return false;
    boolean r;
    r = consumeToken(b, ASSIGN);
    if (!r) r = consumeToken(b, COMP_OR);
    return r;
  }

  /* ********************************************************** */
  // STRING_TYPE | INT_TYPE | FLOAT_TYPE | BOOL_TYPE | ANY
  public static boolean basic_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basic_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASIC_TYPE, "<basic type>");
    r = consumeToken(b, STRING_TYPE);
    if (!r) r = consumeToken(b, INT_TYPE);
    if (!r) r = consumeToken(b, FLOAT_TYPE);
    if (!r) r = consumeToken(b, BOOL_TYPE);
    if (!r) r = consumeToken(b, ANY);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LEFT_PARENTHESES [arguments [COMMA]] RIGHT_PARENTHESES
  public static boolean call_suffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_suffix")) return false;
    if (!nextTokenIs(b, LEFT_PARENTHESES)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PARENTHESES);
    r = r && call_suffix_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_PARENTHESES);
    exit_section_(b, m, CALL_SUFFIX, r);
    return r;
  }

  // [arguments [COMMA]]
  private static boolean call_suffix_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_suffix_1")) return false;
    call_suffix_1_0(b, l + 1);
    return true;
  }

  // arguments [COMMA]
  private static boolean call_suffix_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_suffix_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = arguments(b, l + 1);
    r = r && call_suffix_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [COMMA]
  private static boolean call_suffix_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_suffix_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // CHECK COLON NEWLINE INDENT check_expr+ DEDENT
  public static boolean check_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "check_block")) return false;
    if (!nextTokenIs(b, CHECK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CHECK, COLON, NEWLINE, INDENT);
    r = r && check_block_4(b, l + 1);
    r = r && consumeToken(b, DEDENT);
    exit_section_(b, m, CHECK_BLOCK, r);
    return r;
  }

  // check_expr+
  private static boolean check_block_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "check_block_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = check_expr(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!check_expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "check_block_4", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // check_test [COMMA primary_expr] NEWLINE
  public static boolean check_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "check_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CHECK_EXPR, "<check expr>");
    r = check_test(b, l + 1);
    r = r && check_expr_1(b, l + 1);
    r = r && consumeToken(b, NEWLINE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [COMMA primary_expr]
  private static boolean check_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "check_expr_1")) return false;
    check_expr_1_0(b, l + 1);
    return true;
  }

  // COMMA primary_expr
  private static boolean check_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "check_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && primary_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // simple_expr [IF simple_expr]
  public static boolean check_test(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "check_test")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CHECK_TEST, "<check test>");
    r = simple_expr(b, l + 1);
    r = r && check_test_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [IF simple_expr]
  private static boolean check_test_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "check_test_1")) return false;
    check_test_1_0(b, l + 1);
    return true;
  }

  // IF simple_expr
  private static boolean check_test_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "check_test_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IF);
    r = r && simple_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
